--- a/app/globals.css
+++ b/app/globals.css
@@ -239,7 +239,7 @@ html {
 }
 
 body {
-  @apply text-sm text-white;
+  @apply bg-black text-sm text-white;
 
   font-family: var(--font-poppins);
 }
